--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,8 +6,13 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+  body(style={background:'lightgray'})
     block content
     script(src='https://code.jquery.com/jquery-3.1.1.slim.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    br
+    style.
+      .logo { position: relative; left: 25px; }
+    div.logo
+      img(width=100, height=50, src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOJdPWCbxnE1qvjf-S1doq1B87ViFogQitlPVceOhclwcYgWyQ&s")
