--- a/views/home.pug
+++ b/views/home.pug
@@ -5,8 +5,14 @@ block content
   .row 
       .col-md-1(style={background: 'darkred'})
         br
-        a(href='/logout', style={color:'white'}, onClick='verify()') &nbsp Logout
-        - 
+        a(href='#', style={color:'white'}, onClick='verify()') &nbsp Logout
+        script(type="text/javascript"). 
+          function verify() {
+              let answer = confirm("Are you sure you wish to log out?");
+              if (answer) {
+                window.location="http://localhost:3000/logout";
+              }
+          }
       .col-md
         ul
           li: a(href='/viewentries') View all entries (edit or delete)
