--- a/views/home.pug
+++ b/views/home.pug
@@ -10,7 +10,7 @@ block content
           function verify() {
               let answer = confirm("Are you sure you wish to log out?");
               if (answer) {
-                window.location="http://localhost:3000/logout";
+                window.location="https://project-4-randyq.herokuapp.com/logout";
               }
           }
       .col-md
