small fix and increased size of left banner

--- a/views/entry.pug
+++ b/views/entry.pug
@@ -5,9 +5,9 @@ block content
     if flash
       .alert(style={color:'red'})=flash.message
     .row 
-      .col-md-1(style={background: 'darkred'})
+      .col-md-2(style={background: 'darkred'})
         br
-        a(href='/', style={color:'white'}) &nbsp Return Home
+        a(href='/', style={color:'white'}) &nbsp Home
         br
         br
         a(href='/viewentries', style={color:'white'}) &nbsp View Entries
