--- a/views/entryList.pug
+++ b/views/entryList.pug
@@ -7,7 +7,7 @@ block content
     .row 
       .col-md-1(style={background: 'darkred'})
         br
-        a(href='/', style={color:'white'}) &nbsp Return Home
+        a(href='/', style={color:'white'}) &nbsp Home
         br
         br
         a(href='/add', style={color:'white'}) &nbsp Add record
