--- a/views/functions.pug
+++ b/views/functions.pug
@@ -3,9 +3,9 @@ extends layout
 block content
     h1=title
     .row
-      .col-md-1(style={background: 'darkred'})
+      .col-md-2(style={background: 'darkred'})
         br
-        a(href='/', style={color:'white'}) &nbsp Return Home
+        a(href='/', style={color:'white'}) &nbsp Home
         br
         br
         a(href='/viewentries', style={color:'white'}) &nbsp View Entries
