--- a/views/registration.pug
+++ b/views/registration.pug
@@ -22,5 +22,6 @@ block content
             input(type="password", name="confirmPassword", title="Re-type your password")
             br
             input(type="submit", value="Register")
+            a(href='/login') &nbsp Back to login
             br 
             hr
