Added authorization and other small enhancements

--- a/views/entry.pug
+++ b/views/entry.pug
@@ -18,7 +18,7 @@ block content
         form(method="POST" action='/add')
             label Name:
             br
-            input(type="text", name="name", value=`${name}`, title='Enter your name')
+            input(type="text", name="name", value=`${name}`, title='Enter name if other than yourself')
             br
             label Weight:
             br
